Secure the API with and API key

--- a/requirements.txt
+++ b/requirements.txt
@@ -7,11 +7,13 @@ chardet==3.0.4
 Django==3.1.1
 django-widget-tweaks==1.4.8
 djangorestframework==3.11.1
+djangorestframework-api-key==2.0.0
 idna==2.10
 kombu==4.6.11
 Pillow==7.2.0
 pytz==2020.1
 redis==3.5.3
+redis-server==5.0.7
 requests==2.24.0
 sqlparse==0.3.1
 urllib3==1.25.10
